crates/rustgit_cli/tests/integration/commands/snapshots/integration__commands__add__files.snap
---
source: crates/rustgit_cli/tests/integration/commands/add.rs
assertion_line: 26
expression: git().ls_files()
---
dir/file1.txt
file.txt
