crates/rustgit_cli/tests/integration/commands/snapshots/integration__commands__add__incremental 1.snap
---
source: crates/rustgit_cli/tests/integration/commands/add.rs
assertion_line: 69
expression: git().ls_files()
---
file.txt
