crates/rustgit_cli/tests/integration/commands/snapshots/integration__commands__add__incremental 2.snap
---
source: crates/rustgit_cli/tests/integration/commands/add.rs
assertion_line: 72
expression: git().ls_files()
---
dir/file1.txt
dir/inner/inner_file.txt
file.txt
